Samples/command-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: simplepod
  name: simplepod
spec:
  containers:
  - command:
    - sleep
    - "1000"
    image: busybox
    name: simplepod
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
