Samples/nodeaffinity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: affinity
  name: affinity
spec:
  replicas: 2
  selector:
    matchLabels:
      run: affinity
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: affinity
    spec:
      containers:
      - image: nginx
        name: affinity
        resources: {}
      affinity:
          nodeAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
              nodeSelectorTerms:
              - matchExpressions:
                - key: kubernetes.io/os
                  operator: In
                  values:
                  - linux
                  - amd64
status: {}


#  Apply taint 'k taint node node01 env=Prod:NoSchedule'
