Samples/pod-hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginxpodvol
  name: nginxpodhostpath
spec:
  volumes:
    - name: volumetmp
      hostPath:
        path: /tmp
        type: Directory
  containers:
  - image: nginx
    name: nginxpodhostpath
    volumeMounts:
      - name: volumetmp
        mountPath: /Data
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
