Samples/secret.yaml
# # Get all secrets as env var 
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: podsecrets-envfrom
spec:
  containers:
  - image: nginx
    name: nginxpod
---
#  Get individual Secrets
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: podsecrets-env
spec:
  containers:
  - image: nginx
    name: nginxpod
---
# Mount secret as volume
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: podsecrets-vol
spec:
  volumes:
    - name: db-secret
      secret:
        secretName: db-secret
  containers:
  - image: nginx
    name: nginxpod
    volumeMounts:
      - name: db-secret
        mountPath: /etc/db-secret
        readOnly: True
